--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.5.0"
   },
+  "browserslist": [
+    "Chrome >= 100",
+    "Safari >= 15",
+    "Firefox >= 100",
+    "Edge >= 100"
+  ],
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
